--- a/31032025/borrador/style.css
+++ b/31032025/borrador/style.css
@@ -38,7 +38,17 @@ h2{
     text-align: center;
     color: black;
 }
-#btns-menu{
+h3{
+    text-align: center;
+    margin-top: 10px;
+}
+.regresar{
+    cursor:pointer;
+}
+.regresar:hover{
+    color: white;
+}
+#btns-menu,.funciones{
     display: flex;
     flex-direction: column;
     gap:20px;
@@ -52,4 +62,9 @@ h2{
     background-color: white;
     color: black;
     border-radius:5px ;
+}
+
+.funciones > input{
+    text-align: center;
+    padding:6px 4px;
 }
