--- a/final/views/edit.ejs
+++ b/final/views/edit.ejs
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="get.php" method="get">
-        <label for="nombre">Nombre:</label>
-        <input name="nombre"  type="text">
-        <input type="submit">
+    <h1>Editor Usuario</h1>
+    <form action="/update/<%= users.id %>" method="post">
+        <input type="text" name="name" placeholder="nombre">
+        <input type="gmail" >
     </form>
 </body>
 </html>
